[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Adelbert Chang <adelbertc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.10"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
